@@ -6,7 +6,6 @@ caching.py
 config.py
 error.py
 search.py
-security.py
 user.py
 userform.py
 version.py
@@ -108,6 +107,10 @@ parser/text_rst.py
 parser/text_moin_wiki.py
 parser/text_xslt.py
 
+security/__init__.py
+security/antispam.py
+security/autoadmin.py
+
 server/__init__.py
 server/daemon.py
 server/twistedmoin.py
@@ -133,8 +136,6 @@ theme/rightsidebar.py
 
 util/ParserBase.py
 util/__init__.py
-util/antispam.py
-util/autoadmin.py
 util/chartypes.py
 util/dataset.py
 util/diff.py
