@@ -218,6 +218,7 @@ only requiring a Python installation.
         'MoinMoin.script.old',
         'MoinMoin.script.old.migration',
         'MoinMoin.script.old.xmlrpc-tools',
+        'MoinMoin.security',
         'MoinMoin.server',
         'MoinMoin.stats',
         'MoinMoin.support',
