@@ -92,7 +92,7 @@ class Config(DefaultConfig):
 
     # Link spam protection for public wikis (Uncomment to enable)
     # Needs a reliable internet connection.
-    #from MoinMoin.util.antispam import SecurityPolicy
+    #from MoinMoin.security.antispam import SecurityPolicy
 
 
     # Mail --------------------------------------------------------------
